tests/baselines/reference/contextualTypeWithTuple.errors.txt
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(3,5): error TS2322: Type '[number, string, boolean]' is not assignable to type '[number, string]'.
  Types of property 'length' are incompatible.
    Type '3' is not assignable to type '2'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(15,1): error TS2322: Type '[number, string, boolean]' is not assignable to type '[number, string]'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(18,17): error TS2741: Property 'a' is missing in type '{}' but required in type '{ a: string; }'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(19,1): error TS2741: Property '2' is missing in type '[number, string]' but required in type '[number, string, boolean]'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(20,5): error TS2322: Type '[string, string, number]' is not assignable to type '[string, string]'.
  Types of property 'length' are incompatible.
    Type '3' is not assignable to type '2'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(23,1): error TS2322: Type '[C, string | number, D]' is not assignable to type '[C, string | number]'.
  Types of property 'length' are incompatible.
    Type '3' is not assignable to type '2'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(24,1): error TS2741: Property '2' is missing in type '[C, string | number]' but required in type '[C, string | number, D]'.
tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts(25,1): error TS2322: Type '[number, string | number]' is not assignable to type '[number, string]'.
  Type 'string | number' is not assignable to type 'string'.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts (8 errors) ====
    // no error
    var numStrTuple: [number, string] = [5, "hello"];
    var numStrTuple2: [number, string] = [5, "foo", true];
        ~~~~~~~~~~~~
!!! error TS2322: Type '[number, string, boolean]' is not assignable to type '[number, string]'.
!!! error TS2322:   Types of property 'length' are incompatible.
!!! error TS2322:     Type '3' is not assignable to type '2'.
    var numStrBoolTuple: [number, string, boolean] = [5, "foo", true];
    var objNumTuple: [{ a: string }, number] = [{ a: "world" }, 5];
    var strTupleTuple: [string, [number, {}]] = ["bar", [5, { x: 1, y: 1 }]];
    class C { }
    class D { }
    var unionTuple: [C, string | number] = [new C(), "foo"];
    var unionTuple1: [C, string | number] = [new C(), "foo"];
    var unionTuple2: [C, string | number, D] = [new C(), "foo", new D()];
    var unionTuple3: [number, string| number] = [10, "foo"]; 
    
    numStrTuple = numStrTuple2;
    numStrTuple = numStrBoolTuple;
    ~~~~~~~~~~~
!!! error TS2322: Type '[number, string, boolean]' is not assignable to type '[number, string]'.
    
    // error
    objNumTuple = [ {}, 5];
                    ~~
!!! error TS2741: Property 'a' is missing in type '{}' but required in type '{ {|a|0|}: string; }'.
!!! related TS2728 tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts:5:21: 'a' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts:5:21
    numStrBoolTuple = numStrTuple;
    ~~~~~~~~~~~~~~~
!!! error TS2741: Property '2' is missing in type '[number, string]' but required in type '[number, string, boolean]'.
    var strStrTuple: [string, string] = ["foo", "bar", 5];
        ~~~~~~~~~~~
!!! error TS2322: Type '[string, string, number]' is not assignable to type '[string, string]'.
!!! error TS2322:   Types of property 'length' are incompatible.
!!! error TS2322:     Type '3' is not assignable to type '2'.
    
    unionTuple = unionTuple1;
    unionTuple = unionTuple2;
    ~~~~~~~~~~
!!! error TS2322: Type '[{|C|0|}, string | number, {|D|1|}]' is not assignable to type '[{|C|2|}, string | number]'.
!!! error TS2322:   Types of property 'length' are incompatible.
!!! error TS2322:     Type '3' is not assignable to type '2'.
!!! annotated symbol 0 tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts:7:7
!!! annotated symbol 1 tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts:8:7
!!! annotated symbol 2 tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts:7:7
    unionTuple2 = unionTuple;
    ~~~~~~~~~~~
!!! error TS2741: Property '2' is missing in type '[{|C|0|}, string | number]' but required in type '[{|C|1|}, string | number, {|D|2|}]'.
!!! annotated symbol 0 tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts:7:7
!!! annotated symbol 1 tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts:7:7
!!! annotated symbol 2 tests/cases/conformance/types/tuple/contextualTypeWithTuple.ts:8:7
    numStrTuple = unionTuple3;
    ~~~~~~~~~~~
!!! error TS2322: Type '[number, string | number]' is not assignable to type '[number, string]'.
!!! error TS2322:   Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.